--- a/Tirukkral/Info.plist
+++ b/Tirukkral/Info.plist
@@ -16,8 +16,26 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>twitterkit-2vwOfQUhFeglqrkPMdQcAvYYK</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>twitterkit-2vwOfQUhFeglqrkPMdQcAvYYK</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>twitter</string>
+		<string>twitterauth</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
